--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" type="text/css" href="css/insta.css">
 
     <title>Aqueronte</title>
-    <link rel="icon" type="image/png" href="imagens/favi.png" />
+    <link rel="icon" type="image/png" href="imagens/favi.png" style="border-radius: 10px;" />
 
   </head>
 
@@ -188,21 +188,21 @@
 
                               <div class="carousel-item"><!--   INICIO ITEM 2  -->
                                   <div>
-                                    <iframe  width="100%" height="300" src="https://www.youtube.com/embed/9jowyKm4qJc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+                                    <iframe  width="100%" height="300" src="https://www.youtube.com/embed/cXnHE47x3Vk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
                                   </div>
                               </div><!--   FINAL ITEM 2  -->
 
 
                               <div class="carousel-item"><!--   INICIO ITEM 3  -->
                                   <div >
-                                   <iframe width="100%" height="300" src="https://www.youtube.com/embed/JiPog29uhGc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                   <iframe width="100%" height="300" src="https://www.youtube.com/embed/U1kIbOOY44c" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                   </div>
                               </div><!--   FINAL ITEM 3  -->
 
 
                               <div class="carousel-item"><!--   INICIO ITEM 4  -->
                                  <div>
-                                    <iframe width="100%" height="300" src="https://www.youtube.com/embed/5PPRtYinSdk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
+                                    <iframe width="100%" height="300" src="https://www.youtube.com/embed/RHbOQhxj2OI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>  
                                   </div>
                               </div><!--   FINAL ITEM 4  -->
 
