--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
           <div class="row">
             <div class="col-12">
               <img src="imagens/banner2.png" width="100%" >
+              <!--Begin: Star-Clicks.com HTML Code--><script type='text/javascript' src='https://www.star-clicks.com/secure/ads.php?pid=58116371252619747'></script><!-- End: Star-Clicks.com -->
             </div>
           </div>
         </div>
