--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
-  <!-- <link rel="stylesheet" href="fontawesome/css/all.css"> -->
+ <link rel="stylesheet" href="fontawesome/css/all.css">
 
 
     <script src="https://kit.fontawesome.com/49e1d7c9ed.js" crossorigin="anonymous"></script>
